{{$NEXT}}

0.001071  2018-12-13 09:43:38-08:00 America/Los_Angeles

    - Add --notify-text CLI option
    - Fix exit code parsing and reporting

0.001070  2018-10-24 13:19:53-07:00 America/Los_Angeles

    - Allow --author-testing in 'projects' command
    - Misc minor changes

0.001069  2018-08-23 13:48:54-07:00 America/Los_Angeles

    - Fix busy-spin in job reaper
    - Allow --no-fork and --no-preload simultaneously

0.001068  2018-07-27 09:12:45-07:00 America/Los_Angeles

    - Fix more encoding/utf8 bugs
    - Fix missing dep on sufficient List::Utils version

0.001067  2018-07-18 07:42:06-07:00 America/Los_Angeles

    - Add ability to congiure a custom log file format

0.001066  2018-07-12 08:06:46-07:00 America/Los_Angeles

    - Fix issue where isolation jobs were being kicked off too early. It needs to wait for all non-isolation jobs to finish first.
    - New Feature: # HARNESS-CONFLICTS-XXX
    - New documentation for HARNESS-CATEGORY-IMMISCIBLE
    - New documentation for HARNESS-TIMEOUT-EVENT
    - Get rid of the use of each when walking a hash.
    - Allow comment only lines prior to HARNESS-XXX directives
    - Accept binary TAP output that is not correctly formatted to UTF8
    - Honor multiple spaces (or -) as a delimiter for # HARNESS directives

0.001065  2018-04-22 03:26:57-07:00 America/Los_Angeles

    - Fix utf8 double encoding error

0.001064  2018-03-29 22:47:10-07:00 America/Los_Angeles

    - Make it possible to chdir for a given test
    - Make run automatically chdir to the dir you were in when queuing tests
    - Add 'projects' command to run a dir with multiple projects

0.001063  2018-03-27 10:17:02-07:00 America/Los_Angeles

    - Make it possible to use relative paths in yath.rc

0.001062  2018-03-19 09:22:18-07:00 America/Los_Angeles

    - Fix bug where $, and $\ would break the formatters

0.001061  2018-03-14 12:47:28-07:00 America/Los_Angeles

    - No Changes since last trial
