@@ -30,6 +30,7 @@ use Test2::Util::HashBase qw{
     -_encoding
     -show_buffer
     -color
+    -progress
     -tty
     -verbose
     -job_length
@@ -215,7 +216,7 @@ sub write {
     my $hf = hub_truth($f);
     my $depth = $hf->{nested} || 0;
 
-    return if $depth && !$self->{+SHOW_BUFFER};
+    return if $depth && (!$self->{+SHOW_BUFFER} || !$self->{+PROGRESS});
 
     my $lines;
     if (!$self->{+VERBOSE}) {
@@ -261,7 +262,7 @@ sub write {
 
     if (!$self->{+VERBOSE}) {
         print $io $_, "\n" for @$lines;
-        if ($self->{+TTY}) {
+        if ($self->{+TTY} && $self->{+PROGRESS}) {
             print $io $self->render_ecount($f);
             $self->{+_BUFFERED} = 1;
         }
