@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add option to turn off progress indicators
+
 0.001071  2018-12-13 09:43:38-08:00 America/Los_Angeles
 
     - Add --notify-text CLI option
